2005-10-06  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (gpgol_LDADD): Prefix gpgol.def and mapi32.dll with
	$(srcdir).

	* Makefile.am (.rc.o): Invoke windres with "-I .".

	* Makefile.am (.rc.o): Invoke windres with -I $(srcdir).

	* Makefile.am (gpgol_SOURCES): Add util.h.

2005-09-29  Werner Koch  <wk@g10code.com>

	* gpgmsg.cpp (encrypt_and_sign): Pass signing key to encryption
	function.

	* passphrase-dialog.c (signer_dialog_box): New arg encrypting. 

	* gpgmsg.cpp (encrypt_and_sign): Set content type.

	* engine-gpgme.c (op_lookup_keys): Fixed multiple key detection.

2005-09-28  Werner Koch  <wk@g10code.com>

	* olflange.cpp (DoCommand): Catch close command and resend to
	avoid the "save changes?".

	* display.cpp (update_display): Take care of utf-8 issues.
	* common.c (latin1_to_utf8): New.
	* pgpmime.c (latin1_data_write): New.
	(plaintext_handler): Use it here.
	(message_cb): Detect utf-8 encoding.

	* main.c (read_options): Make sure that compat flags are always
	properly initialized.

	* display.cpp (find_message_window): First try to find the window
	by class name.

	* common.c (wchar_to_utf8_2): New.

2005-09-27  Werner Koch  <wk@g10code.com>

	* pgpmime.c (pgpmime_decrypt): Pass a pseduo filename to the
	decryption function.

	* verify-dialog.c (load_sigbox): Get key direct from gpgme.
	* passphrase-dialog.c (load_secbox, load_recipbox): Reworked.
	(decrypt_key_dlg_proc, decrypt_key_ext_dlg_proc): Reworked.
	(count_keys, release_keyarray): New.
	(signer_dialog_box, passphrase_callback_box): Adjusted to above
	changes.
	* engine-gpgme.c (op_deinit): Remove keycache cleanup.
	* Makefile.am (gpgol_SOURCES): Removed keycache.c, keycache.h.
	* keycache.c, keycache.h: Removed.

	* recipient-dialog.c (recipient_dialog_box) 
	(recipient_dialog_box2): Rewritten and changed interface.
	(load_rsetbox): Removed keycache stuff and rewrote to make use of
	the keyarray.
	(copy_item, initialize_keybox, recipient_dlg_proc): Ditto.