@@ -1,0 +1,164 @@
+LIBRARY MAPI32.DLL
+EXPORTS
+BuildDisplayTable@40
+CbOfEncoded@4
+CchOfEncoding@4
+ChangeIdleRoutine@28
+CloseIMsgSession@4
+CreateIProp@24
+CreateTable@36
+DeinitMapiUtil@0
+DeregisterIdleRoutine@4
+EnableIdleRoutine@8
+EncodeID@12
+FBadColumnSet@4
+FBadEntryList@4
+FBadProp@4
+FBadPropTag@4
+FBadRestriction@4
+FBadRglpNameID@8
+FBadRglpszA@8
+FBadRglpszW@8
+FBadRow@4
+FBadRowSet@4
+FBadSortOrderSet@4
+FBinFromHex@8
+FDecodeID@12
+FEqualNames@8
+FPropCompareProp@12
+FPropContainsProp@12
+FPropExists@8
+FreePadrlist@4
+FreeProws@4
+FtAdcFt@20
+FtAddFt@16
+FtDivFtBogus@20
+FtMulDw@12
+FtMulDwDw@8
+FtNegFt@8
+FtSubFt@16
+FtgRegisterIdleRoutine@20
+GetAttribIMsgOnIStg@12
+GetTnefStreamCodepage
+GetTnefStreamCodepage@12
+HexFromBin@12
+HrAddColumns@16
+HrAddColumnsEx@20
+HrAllocAdviseSink@12
+HrComposeEID@28
+HrComposeMsgID@24
+HrDecomposeEID@28
+HrDecomposeMsgID@24
+HrDispatchNotifications@4
+HrEntryIDFromSz@12
+HrGetOneProp@12
+HrIStorageFromStream@16
+HrQueryAllRows@24
+HrSetOneProp@8
+HrSzFromEntryID@12
+HrThisThreadAdviseSink@8
+HrValidateIPMSubtree@20
+HrValidateParameters@8
+InstallFilterHook@4
+IsBadBoundedStringPtr@8
+LAUNCHWIZARD
+LPropCompareProp@8
+LaunchWizard@20
+LpValFindProp@12
+MAPI_NSCP_SynchronizeClient@8
+MAPIAddress@44
+MAPIAdminProfiles
+MAPIAdminProfiles@8
+MAPIAllocateBuffer
+MAPIAllocateBuffer@8
+MAPIAllocateMore
+MAPIAllocateMore@12
+MAPIDeinitIdle@0
+MAPIDeleteMail@20
+MAPIDetails@20
+MAPIFindNext@28
+MAPIFreeBuffer
+MAPIFreeBuffer@4
+MAPIGetDefaultMalloc@0
+MAPIGetNetscapeVersion@0
+MAPIInitIdle@4
+MAPIInitialize
+MAPIInitialize@4
+MAPILogoff@16
+MAPILogon@24
+MAPILogonEx
+MAPILogonEx@20
+MAPIOpenFormMgr
+MAPIOpenFormMgr@8
+MAPIOpenLocalFormContainer
+MAPIOpenLocalFormContainer@4
+MAPIReadMail@24
+MAPIResolveName@24
+MAPISaveMail@24
+MAPISendDocuments@20
+MAPISendMail
+MAPISendMail@20
+MAPIUninitialize
+MAPIUninitialize@0
+MNLS_CompareStringW@24
+MNLS_IsBadStringPtrW@8
+MNLS_MultiByteToWideChar@24
+MNLS_WideCharToMultiByte@32
+MNLS_lstrcmpW@8
+MNLS_lstrcpyW@8
+MNLS_lstrlenW@4
+MapStorageSCode@4
+OpenIMsgOnIStg@44
+OpenIMsgSession@12
+OpenStreamOnFile
+OpenStreamOnFile@24
+OpenTnefStream
+OpenTnefStream@28
+OpenTnefStreamEx
+OpenTnefStreamEx@32
+PRProviderInit
+PpropFindProp@12
+PropCopyMore@16
+RTFSync
+RTFSync@12
+ScBinFromHexBounded@12
+ScCopyNotifications@16
+ScCopyProps@16
+ScCountNotifications@12
+ScCountProps@12
+ScCreateConversationIndex@16
+ScDupPropset@16
+ScGenerateMuid@4
+ScInitMapiUtil@4
+ScLocalPathFromUNC@12
+ScMAPIXFromCMC
+ScMAPIXFromSMAPI
+ScRelocNotifications@20
+ScRelocProps@20
+ScSplEntry
+ScUNCFromLocalPath@12
+SetAttribIMsgOnIStg@16
+SwapPlong@8
+SwapPword@8
+SzFindCh@8
+SzFindLastCh@8
+SzFindSz@8
+UFromSz@4
+UNKOBJ_COFree@8
+UNKOBJ_Free@8
+UNKOBJ_FreeRows@8
+UNKOBJ_ScAllocate@12
+UNKOBJ_ScAllocateMore@16
+UNKOBJ_ScCOAllocate@12
+UNKOBJ_ScCOReallocate@12
+UNKOBJ_ScSzFromIdsAlloc@20
+UlAddRef@4
+UlFromSzHex@4
+UlPropSize@4
+UlRelease@4
+WrapCompressedRTFStream
+WrapCompressedRTFStream@12
+WrapProgress@20
+WrapStoreEntryID@24
+__CPPValidateParameters@8
+__ValidateParameters@8
